--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -52,43 +52,91 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/etlPassword"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <RelativeLayout
+                    android:id="@+id/layoutPwd"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="New Password"
-                    android:textColorHint="@color/light_gray"
-                    app:boxStrokeColor="@color/light_gray"
-                    app:hintTextColor="@color/text_color"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="#767676">
+                    android:layout_height="60dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etPassword"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/etlPassword"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:hint=""
-                        android:imeOptions="actionNext"
-                        android:inputType="textPassword"
-                        android:maxLength="20"
-                        android:textColor="@color/text_color"
-                        android:textSize="18sp" />
+                        android:hint="New Password"
+                        app:boxCornerRadiusBottomEnd="10dp"
+                        app:boxCornerRadiusBottomStart="10dp"
+                        app:boxCornerRadiusTopEnd="10dp"
+                        app:boxCornerRadiusTopStart="10dp"
+                        app:boxStrokeColor="@color/primary_green"
+                        app:errorIconDrawable="@null"
+                        app:expandedHintEnabled="false"
+                        app:hintTextColor="@color/primary_green"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="#767676">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:hint=""
+                            android:imeOptions="actionNext"
+                            android:inputType="textPassword"
+                            android:maxLength="20"
+                            android:textColor="@color/text_color"
+                            android:textSize="18sp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layoutIndicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="3dp"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <View
+                            android:id="@+id/strengthOne"
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:layout_weight="1"
+                            android:background="@color/error"></View>
+
+                        <View
+                            android:id="@+id/strengthTwo"
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_weight="1"
+                            android:background="@color/error"
+                            android:visibility="invisible"></View>
+
+                        <View
+                            android:id="@+id/strengthThree"
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_weight="1"
+                            android:background="@color/error"
+                            android:visibility="invisible"></View>
+                    </LinearLayout>
+                </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/tvError"
+                    android:id="@+id/tvPasswordInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/etlPassword"
+                    android:layout_below="@+id/layoutPwd"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
                     android:textColor="@color/error"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_size_14sp"
                     android:visibility="gone"></TextView>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -96,12 +144,17 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvError"
+                    android:layout_below="@+id/tvPasswordInfo"
                     android:layout_marginTop="20dp"
                     android:hint="Confirm Password"
-                    android:textColorHint="@color/light_gray"
-                    app:boxStrokeColor="@color/light_gray"
-                    app:hintTextColor="@color/text_color"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/primary_green"
                     app:passwordToggleEnabled="true"
                     app:passwordToggleTint="#767676">
 
