--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -64,10 +64,15 @@
                 android:layout_below="@+id/tvMessage"
                 android:layout_marginTop="20dp"
                 android:hint="Email"
-                app:expandedHintEnabled="false"
                 android:textColorHint="@color/text_color"
-                app:boxStrokeColor="@color/light_gray"
-                app:hintTextColor="@color/text_color">
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxStrokeColor="@color/primary_green"
+                app:errorIconDrawable="@null"
+                app:expandedHintEnabled="false"
+                app:hintTextColor="@color/primary_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etEmail"
@@ -83,6 +88,30 @@
                     android:textSize="@dimen/text_size_18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutEmailError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/etlEmail"
+                android:layout_marginTop="-10dp"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_erro"></ImageView>
+
+                <TextView
+                    android:id="@+id/tvEmailError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/text_size_14sp"></TextView>
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvNext"
