--- a/app/src/main/res/layout/fragment_face_id_not_available__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_face_id_not_available__bottom_sheet.xml
@@ -1,69 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingRight="32dp"
-    android:paddingLeft="30dp">
+    android:paddingLeft="30dp"
+    android:paddingRight="32dp">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="30dp">
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="65dp"
             android:layout_height="3dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="130dp"
-            android:layout_weight="1"
-            android:background="@drawable/shape_green_round_rect"
-            android:textAlignment="center" />
+            android:layout_gravity="center"
+            android:background="@drawable/shape_green_round_rect" />
 
     </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/faceidnotavaitxt"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/opensans_bold"
+        android:text="@string/faceidnotavaitxt"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        />
+        android:textSize="@dimen/text_size_24sp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/faceidnotavaidescri"
-        android:textSize="17dp"
         android:layout_marginTop="23dp"
         android:fontFamily="@font/opensans_regular"
+        android:text="@string/faceidnotavaidescri"
         android:textColor="@color/primary_black"
-        />
+        android:textSize="@dimen/text_size_18sp" />
 
-    <TextView
-        android:id="@+id/okBtn"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvOK"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginTop="54dp"
-        android:layout_gravity="center"
-        android:background="@drawable/shape_green_round_rect"
-        android:fontFamily="@font/opensans_bold"
-        android:paddingTop="20sp"
-        android:text="OK"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="18dp" />
+        android:layout_marginTop="50dp"
+        app:cardBackgroundColor="@color/primary_green"
+        app:cardCornerRadius="32dp">
+
+        <TextView
+            android:id="@+id/okBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:text="OK"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_18sp" />
+    </androidx.cardview.widget.CardView>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="42dp"
-        />
-
-
-
+        android:layout_height="42dp" />
 </LinearLayout>
