--- a/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
@@ -1,55 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.greenbox.coyni."
-    android:paddingLeft="30dp"
     android:orientation="vertical"
-    android:paddingRight="32dp"
-    >
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    tools:context="com.greenbox.coyni.">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/epincorrecttext"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/opensans_bold"
+        android:text="@string/epincorrecttext"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        />
+        android:textSize="@dimen/text_size_24sp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/epincorrectdescri"
-        android:textSize="16dp"
-        android:layout_marginTop="23dp"
-        android:textColor="@color/primary_black"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/opensans_regular"
-        />
+        android:text="@string/epincorrectdescri"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/text_size_18sp" />
 
-    <TextView
-        android:id="@+id/okBtn"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvEmailOK"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginTop="54dp"
-        android:layout_gravity="center"
-        android:fontFamily="@font/opensans_bold"
-        android:paddingTop="20sp"
-        android:text="OK"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:background="@drawable/shape_green_round_rect"
-        android:textSize="18dp" />
+        app:cardBackgroundColor="@color/primary_green"
+        app:cardCornerRadius="32dp">
+
+        <TextView
+            android:id="@+id/okBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:text="OK"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_18sp" />
+    </androidx.cardview.widget.CardView>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="42dp"
-        />
-
+        android:layout_height="42dp" />
 
 
 </LinearLayout>
