--- a/app/src/main/res/drawable/outline_box_unfocused.xml
+++ b/app/src/main/res/drawable/outline_box_unfocused.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape>
-            <stroke android:color="@color/light_gray"
-                android:width="2dp"/>
+            <stroke android:color="@color/dark_gray"
+                android:width="1dp"/>
             <corners android:radius="12dp"/>
         </shape>
     </item>
