--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -43,33 +43,33 @@
         <LinearLayout
             android:id="@+id/getStartedLL"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
             android:background="@drawable/shape_green_round_rect">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
                 android:text="Get Started"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_18sp" />
+                android:textSize="@dimen/text_size_18sp"
+                android:layout_gravity="center"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layoutLogin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/shape_green_round_rect_core"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
                 android:text="Log in"
