--- a/app/src/main/res/layout/outlinebox_layout.xml
+++ b/app/src/main/res/layout/outlinebox_layout.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <View
                 android:id="@+id/stregnthOne"
