--- a/app/src/main/res/layout/outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_layout.xml
@@ -46,7 +46,7 @@
         <com.santalu.maskara.widget.MaskEditText
             android:id="@+id/pnET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_gravity="center"
             android:inputType="number"
             android:padding="14dp"
@@ -54,12 +54,12 @@
             android:background="@android:color/transparent"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
-            android:textSize="@dimen/text_size_13sp"
+            android:textSize="@dimen/text_size_18sp"
             app:mask="(___) ___-____"
             android:singleLine="true"
             android:maxLines="1"
             android:textCursorDrawable="@drawable/cursor_color"
-            android:fontFamily="@font/opensans_regular"/>
+            android:fontFamily="@font/opensans_semibold"/>
 
 
     </LinearLayout>
@@ -74,6 +74,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:textSize="@dimen/text_size_11sp"
+        android:fontFamily="@font/opensans_semibold"
         android:text="Phone Number"
         android:textColor="@color/primary_black"
         app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
