--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
 
     <color name="light_gray">#C5C5C5</color>
+    <color name="dark_gray">#909090</color>
     <color name="secondary_color">#00A6A2</color>
     <color name="primary_color">#00A6A2</color>
     <color name="inactive_color">#B5E2E0</color>
