--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="text_size_17sp">17sp</dimen>
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="text_size_20sp">20sp</dimen>
+    <dimen name="text_size_21sp">21sp</dimen>
     <dimen name="text_size_22sp">22sp</dimen>
     <dimen name="text_size_23sp">23sp</dimen>
     <dimen name="text_size_24sp">24sp</dimen>
