--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="text_size_17sp">18sp</dimen>
     <dimen name="text_size_18sp">19sp</dimen>
     <dimen name="text_size_20sp">21sp</dimen>
+    <dimen name="text_size_21sp">22sp</dimen>
     <dimen name="text_size_22sp">23sp</dimen>
     <dimen name="text_size_23sp">24sp</dimen>
     <dimen name="text_size_24sp">25sp</dimen>
