--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="text_size_17sp">19sp</dimen>
     <dimen name="text_size_18sp">20sp</dimen>
     <dimen name="text_size_20sp">22sp</dimen>
+    <dimen name="text_size_21sp">23sp</dimen>
     <dimen name="text_size_22sp">24sp</dimen>
     <dimen name="text_size_23sp">25sp</dimen>
     <dimen name="text_size_24sp">26sp</dimen>
